Ajustes que estavam pendentes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <div class="logos">
-                <img src="https://via.placeholder.com/200x80/61c1d0/ffffff?text=AmorSaúde" alt="AmorSaúde" class="logo amor-saude">
+                <img src="logo-amorsaude.png" alt="AmorSaúde" class="logo amor-saude">
                 <div class="event-title">
                     <h1>TREINÃO de TODOS</h1>
                     <p>Corrida 5km • Caminhada 3km • Treino Funcional</p>
@@ -21,7 +21,7 @@
                         São João del Rei - MG
                     </div>
                 </div>
-                <img src="https://via.placeholder.com/200x80/a5ff01/000000?text=Cartão+de+TODOS" alt="Cartão de TODOS" class="logo cartao-todos">
+                <img src="logo-cdt.png" alt="Cartão de TODOS" class="logo cartao-todos" style="width: 210px;">
             </div>
         </div>
     </header>
@@ -32,7 +32,7 @@
             <div class="hero-content">
                 <div class="hero-badge">Evento Aberto ao Público • Ação Solidária</div>
                 <h2>Corrida + Caminhada + Natal Solidário</h2>
-                <p>Participe do evento esportivo e social de São João del Rei!</p>
+                <p>Participe deste evento esportivo e social, com foco na saúde de São João del Rei!</p>
                 
                 <div class="promo-banner">
                     <div class="promo-content">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="highlight-item">
                         <span class="icon">🎄</span>
-                        <span>Natal Solidário</span>
+                        <span>Ajuda no Natal Solidário</span>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h3>Sobre o Treinão de TODOS</h3>
-                    <p>Um evento esportivo beneficente que combina saúde, bem-estar e solidariedade. Participe da corrida de 5km ou caminhada de 3km, seguida de um treino funcional gratuito para todos os participantes.</p>
+                    <p>Um evento esportivo beneficente que combina saúde, bem-estar e solidariedade. Podendo participar da corrida de 5km ou caminhada de 3km, seguidas de um treino funcional gratuito para todos os participantes. Além de poder aproveitar um pouco mais conhecendo as stands dos nossos parceiros!</p>
                     
                     <div class="kit-info">
                         <h4>🎯 Kit do Participante</h4>
@@ -89,14 +89,14 @@
 
                     <div class="solidarity-info">
                         <h4>🎄 Natal Solidário</h4>
-                        <p>Sua entrada é um <strong>brinquedo</strong> que será doado para crianças carentes da nossa cidade. Faça parte dessa corrente do bem!</p>
+                        <p>Sua entrada é um <strong>brinquedo novo</strong> ou em <strong>boas condições</strong> que será doado para crianças carentes da nossa cidade. <b>Faça parte dessa corrente do bem!</b></p>
                     </div>
                 </div>
                 <div class="about-features">
                     <div class="feature-item">
                         <div class="feature-icon">⏱️</div>
                         <div class="feature-text">
-                            <strong>Vagas Limitadas</strong>
+                            <strong>Camisetas Limitadas</strong>
                             <span>Apenas 50 camisetas disponíveis</span>
                         </div>
                     </div>
@@ -317,12 +317,11 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logos">
-                    <img src="https://via.placeholder.com/150x60/61c1d0/ffffff?text=AmorSaúde" alt="AmorSaúde">
-                    <img src="https://via.placeholder.com/150x60/a5ff01/000000?text=Cartão+de+TODOS" alt="Cartão de TODOS">
+                    <img src="logo-amorsaude.png" alt="AmorSaúde">
+                    <img src="logo-cdt.png" alt="Cartão de TODOS">
                 </div>
                 <div class="footer-info">
                     <p><strong>Treinão de TODOS</strong> - Unindo esporte e solidariedade em São João del Rei</p>
-                    <p>&copy; 2024 Treinão de TODOS. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
