Adição de botão animado para inscrição

--- a/index.html
+++ b/index.html
@@ -348,6 +348,19 @@
         </div>
     </div>
 
+    <div class="floating-button-container">
+        <button class="floating-button" id="floatingBtn">
+            <span class="pulse-ring"></span>
+            <span class="button-icon">🏃‍♂️</span>
+            <span class="button-text">Inscreva-se!</span>
+        </button>
+        
+        <div class="floating-tooltip">
+            <span>Garanta sua vaga! 🎁</span>
+            <div class="tooltip-arrow"></div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
