Ajuste em alguns dados

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="info-icon">📅</div>
                     <div class="info-content">
                         <h4>Data</h4>
-                        <p>10 de Dezembro de 2024</p>
+                        <p>20 de Dezembro de 2025</p>
                     </div>
                 </div>
                 <div class="info-item">
@@ -253,7 +253,7 @@
                     <div class="info-icon">📍</div>
                     <div class="info-content">
                         <h4>Local</h4>
-                        <p>Parque Municipal<br>São João del Rei - MG</p>
+                        <p>Praça do Matozinhos<br>São João del Rei - MG</p>
                     </div>
                 </div>
                 <div class="info-item">
